Lade till scoutfrekvenser

--- a/body.tex
+++ b/body.tex
@@ -55,7 +55,7 @@ Som suffix används följande:
 
 \subsection{Utländska signaler}
 
-Det är svårare att veta exakt hur utländska signaler är uppbyggda. Eftersom denna handledning är för VHF/UHF tar vi inte med alla DXCC-signaler utan de som är närmast oss i Sverige. Konsultera den fulla DXCC-listan för mer information.
+Eftersom denna handledning är för VHF/UHF tar vi inte med alla DXCC-signaler utan de som är närmast oss i Sverige. Konsultera den fulla DXCC-listan för mer information.
 
 \begin{center}
 \begin{longtable}{cl|cl}
@@ -119,71 +119,6 @@ Sverige delas in i följande distrikt efter sina län:
 \end{longtable}
 \end{center}
 
-\section{Terminologi och trafik}
-\subsection{Q-koder}
-\begin{longtable}{ll}
-	\textbf{Kod} & \textbf{Fråga / Svar}                                                 \\ \hline 
-	QRA          & Vad heter er station?                                                 \\
-	             & Vår station heter ...                                                 \\ \hline
-	QRB          & Hur långt bort från min station befinner ni er?                       \\
-	             & Avståndet mellan oss är ungefär ...                                   \\ \hline
-	QRG          & Kan ni ange min exakta frekvens?                                      \\
-	             & Er exakta frekvens är ... (MHz/kHz)                                   \\ \hline
-	QRH          & Varierar min frekvens/våglängd?                                       \\
-	             & Er frekvens/våglängd varierar.                                        \\ \hline
-	QRI          & Hur är min sändningston (CW)?                                         \\
-	             & Er sändningston är 1--God, 2--Varierande, 3--Dålig                    \\ \hline
-	QRK          & Vilken uppfattbarhet har mina signaler?                               \\
-	             & Uppfattbarheten hos dina signaler är:                                 \\
-	             & 1--Dålig, 2--Bristfällig, 3--Ganska god, 4--God, 5--Utmärkt           \\ \hline
-	QRL          & Är ni upptagen?                                                       \\
-	             & Jag är upptagen med ... (namn/signal) stör ej.                        \\ \hline
-	QRM          & Är ni störd av annan station?                                         \\
-	             & Störningarna är:                                                      \\
-	             & 1--Obef., 2--Svaga, 3--Måttliga, 4--Starka, 5--Mycket starka          \\ \hline
-	QRN          & Besväras ni av atmosfäriska störningar?                               \\
-	             & Störningarna är:                                                      \\
-	             & 1--Obef., 2--Svaga, 3--Måttliga, 4--Starka, 5--Mycket starka          \\ \hline
-	QRO          & Kan jag (ska jag) öka sändareffekten?                                 \\
-	             & Öka sändareffekten.                                                   \\ \hline
-	QRP          & Kan jag (ska jag) minska sändareffekten?                              \\
-	             & Minska sändareffekten.                                                \\ \hline
-	QRQ          & Kan jag (får jag) öka sändningshastigheten?                           \\
-	             & Öka sändningshastigheten.                                             \\ \hline
-	QRS          & Kan jag (skall jag) sända långsammare?                                \\
-	             & Sänd långsammare.                                                     \\ \hline
-	QRT          & Skall jag avbryta sändningen?                                         \\
-	             & Avbryt sändningen                                                     \\ \hline
-	QRU          & Har ni något till mig?                                                \\
-	             & Jag har inget till er. Se även QTC.                                   \\ \hline
-	QRV          & Är ni redo?                                                           \\
-	             & Jag är redo.                                                          \\ \hline
-	QRX          & När anropar ni mig härnäst?                                           \\
-	             & Jag anropar er kl ... (på ... MHz/kHz)                                \\ \hline
-	QRZ          & Vem anropar mig?                                                      \\
-	             & Ni anropas av ... (på ... MHz/kHz).                                   \\ \hline
-	QSA          & Vilken styrka har mina signaler?                                      \\
-	             & Era signaler är:                                                      \\
-	             & 1--Ej uppf., 2--Svaga, 3--Ganska starka, 4--Starka, 5--Mycket starka  \\ \hline
-	QSB          & Svajar styrkan på mina signaler?                                      \\
-	             & Styrkan på era signaler svajar.                                       \\ \hline
-	QSK          & Kan du höra mig mellan dina tecken och får jag avbryta dig? \\
-	             & Jag kan höra dig mellan mina tecken och du får avbryta.               \\ \hline
-	QSL          & Kan ni ge mig kvittens?                                               \\
-	             & Jag kvitterar.                                                        \\ \hline
-	QSO          & Ha ni förbindelse med ... eller ... (förmedlat)?                      \\
-	             & Jag har förbindelse med ... (via ...)                                 \\ \hline
-	QST          & Har tidigare använts som allmänt anrop men ersatts av CQ              \\ \hline
-	QSY          & Skall jag övergå till att sända på annan frekvens?                    \\
-	             & Gå över till att sända på annan frekvens (eller ... kHz/MHz).         \\ \hline
-	QTC          & Hur många telegram har ni att sända?                                  \\
-	             & Jag har ... telegram till dig (eller ...).                            \\ \hline
-	QTH          & Vilken är er geografiska position?                                    \\
-	             & Min geografiska position är ...                                       \\ \hline
-	QTR          & Kan ni ge mig rätt tid?                                               \\
-	             & Rätt tid är ...                                                       \\ \hline
-\end{longtable}
-
 \subsection{Bokstaveringsalfabetet (Svenska)}
 
 \begin{center}
@@ -227,6 +162,73 @@ Sverige delas in i följande distrikt efter sina län:
 	O & Oscar    &      &            &   & Space
 \end{tabular}
 \end{center}
+
+
+\section{Terminologi och trafik}
+\subsection{Q-koder}
+\begin{longtable}{ll}
+	\textbf{Kod} & \textbf{Fråga / Svar}                                                         \\ \hline \endhead
+	QRA & Vad heter er station?                                                \\
+	    & Vår station heter ...                                                \\ \hline
+	QRB & Hur långt bort från min station befinner ni er?                      \\
+	    & Avståndet mellan oss är ungefär ...                                  \\ \hline
+	QRG & Kan ni ange min exakta frekvens?                                     \\
+	    & Er exakta frekvens är ... (MHz/kHz)                                  \\ \hline
+	QRH & Varierar min frekvens/våglängd?                                      \\
+	    & Er frekvens/våglängd varierar.                                       \\ \hline
+	QRI & Hur är min sändningston (CW)?                                        \\
+	    & Er sändningston är 1--God, 2--Varierande, 3--Dålig                   \\ \hline
+	QRK & Vilken uppfattbarhet har mina signaler?                              \\
+	    & Uppfattbarheten hos dina signaler är:                                \\
+	    & 1--Dålig, 2--Bristfällig, 3--Ganska god, 4--God, 5--Utmärkt          \\ \hline
+	QRL & Är ni upptagen?                                                      \\
+	    & Jag är upptagen med ... (namn/signal) stör ej.                       \\ \hline
+	QRM & Är ni störd av annan station?                                        \\
+	    & Störningarna är:                                                     \\
+	    & 1--Obef., 2--Svaga, 3--Måttliga, 4--Starka, 5--Mycket starka         \\ \hline
+	QRN & Besväras ni av atmosfäriska störningar?                              \\
+	    & Störningarna är:                                                     \\
+	    & 1--Obef., 2--Svaga, 3--Måttliga, 4--Starka, 5--Mycket starka         \\ \hline
+	QRO & Kan jag (ska jag) öka sändareffekten?                                \\
+	    & Öka sändareffekten.                                                  \\ \hline
+	QRP & Kan jag (ska jag) minska sändareffekten?                             \\
+	    & Minska sändareffekten.                                               \\ \hline
+	QRQ & Kan jag (får jag) öka sändningshastigheten?                          \\
+	    & Öka sändningshastigheten.                                            \\ \hline
+	QRS & Kan jag (skall jag) sända långsammare?                               \\
+	    & Sänd långsammare.                                                    \\ \hline
+	QRT & Skall jag avbryta sändningen?                                        \\
+	    & Avbryt sändningen                                                    \\ \hline
+	QRU & Har ni något till mig?                                               \\
+	    & Jag har inget till er. Se även QTC.                                  \\ \hline
+	QRV & Är ni redo?                                                          \\
+	    & Jag är redo.                                                         \\ \hline
+	QRX & När anropar ni mig härnäst?                                          \\
+	    & Jag anropar er kl ... (på ... MHz/kHz)                               \\ \hline
+	QRZ & Vem anropar mig?                                                     \\
+	    & Ni anropas av ... (på ... MHz/kHz).                                  \\ \hline
+	QSA & Vilken styrka har mina signaler?                                     \\
+	    & Era signaler är:                                                     \\
+	    & 1--Ej uppf., 2--Svaga, 3--Ganska starka, 4--Starka, 5--Mycket starka \\ \hline
+	QSB & Svajar styrkan på mina signaler?                                     \\
+	    & Styrkan på era signaler svajar.                                      \\ \hline
+	QSK & Kan du höra mig mellan dina tecken och får jag avbryta dig?          \\
+	    & Jag kan höra dig mellan mina tecken och du får avbryta.              \\ \hline
+	QSL & Kan ni ge mig kvittens?                                              \\
+	    & Jag kvitterar.                                                       \\ \hline
+	QSO & Ha ni förbindelse med ... eller ... (förmedlat)?                     \\
+	    & Jag har förbindelse med ... (via ...)                                \\ \hline
+	QST & Har tidigare använts som allmänt anrop men ersatts av CQ             \\ \hline
+	QSY & Skall jag övergå till att sända på annan frekvens?                   \\
+	    & Gå över till att sända på annan frekvens (eller ... kHz/MHz).        \\ \hline
+	QTC & Hur många telegram har ni att sända?                                 \\
+	    & Jag har ... telegram till dig (eller ...).                           \\ \hline
+	QTH & Vilken är er geografiska position?                                   \\
+	    & Min geografiska position är ...                                      \\ \hline
+	QTR & Kan ni ge mig rätt tid?                                              \\
+	    & Rätt tid är ...                                                      \\ \hline
+\end{longtable}
+
 
 \section{Signal och brus}
 
@@ -384,9 +386,9 @@ På PMR446 och andra band samt för ett antal repeatrar på 70cm primärt men ä
 
 Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS för att hindra att störningar uppkommer vid conds mm. Det ger också möjligheten för sändaramatörer att öppna just den repeater man önskar om man har flera på samma frekvens omkring sig.
 
-\begin{longtable}{lcccc}
+\begin{tabular}{lcccc}
 	\textbf{Område} & \textbf{Primär} & \textbf{Sek. 1} & \textbf{Sek. 2} & \textbf{Sek. 3} \\ \hline
-	\endhead
+%	\endhead
 	Distrikt 0      &      77,0       &      123.0      &      67.0       &      100.0      \\
 	Distrikt 1      &      218.1      &      233.6      &                 &  \\
 	Distrikt 2      &      107.2      &      146.2      &      162.2      &      186.2      \\
@@ -396,9 +398,11 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	Distrikt 5      &      82.5       &      91.5       &      103.5      &      203.5      \\
 	Distrikt 6      &      114.8      &      118,8      &      94.8       &      131.8      \\
 	Distrikt 7      &      79.7       &      156.7      &      210.7      &
-\end{longtable}
+\end{tabular}
 
-\section{Kanalnumrering för amatörradioband}
+\section{Frekvenser amatörradio}
+
+\subsection{Kanalnumrering VHF/UHF}
 
 Denna typ av kanalnumrering är överenskommen inom IARU region 1 för 6m, 2m och 70cm banden på amatörradiofrekvenser. Kanalnumreringen består av ett prefix som anger vilket band och här används F--6m, V--2m, U--70cm. Därefter används 2 siffror på 6m och 2m banden och tre siffror på 70cm bandet för att ange kanal. 
 
@@ -427,7 +431,7 @@ Information om kanalnumreringen för 23cm-bandet tas tacksamt mot.
 
 
 \clearpage
-\subsection{FM-kanaler 6m-bandet}
+\subsubsection{FM-kanaler 6m-bandet}
 
 \begin{longtable}{rrl|rrl}
 	 Kanal & Tidigare & Anm   &  Kanal & Tidigare & Anm \\ \hline
@@ -459,38 +463,38 @@ Information om kanalnumreringen för 23cm-bandet tas tacksamt mot.
 \end{longtable}
 
 \clearpage
-\subsection{FM-kanaler 2m-bandet}
+\subsubsection{FM-kanaler 2m-bandet}
 
 \begin{longtable}{rrl|rrl}
-	Frekvens & Kanal & Anm.          & Frekvens & Kanal & Anm.          \\ \hline
-	145,2125 &   V17 &               & 145,5000 &   V40 & S20  FM Anrop \\
-	145,2250 &   V18 & S9            & 145,5125 &   V41 &               \\
-	145,2375 &   V19 & INET GW       & 145,5250 &   V42 & S21           \\
-	145,2500 &   V20 & S10           & 145,5375 &   V43 &               \\
-	145,2625 &   V21 &               & 145,5500 &   V44 & S22           \\
-	145,2750 &   V22 & S11           & 145,5625 &   V45 &               \\
-	145,2875 &   V23 & INET GW       & 145,5750 &   V46 & S23           \\
-	145,3000 &   V24 & S12  RTTY     & 145,5875 &   V47 &               \\
-	145,3125 &   V25 &               & 145,6000 &  RV48 & R0            \\
-	145,3250 &   V26 & S13           & 145,6125 &  RV49 & R0X           \\
-	145,3375 &   V27 & INET GW       & 145,6250 &  RV50 & R1            \\
-	145,3500 &   V28 & S14           & 145,6375 &  RV51 & R1X           \\
-	145,3625 &   V29 &               & 145,6500 &  RV52 & R2            \\
-	145,3750 &   V30 & S15  DV Anrop & 145,6625 &  RV53 & R2X           \\
-	145,3875 &   V31 &               & 145,6750 &  RV54 & R3            \\
-	145,4000 &   V32 & S16           & 145,6875 &  RV55 & R3X           \\
-	145,4125 &   V33 &               & 145,7000 &  RV56 & R4            \\
-	145,4250 &   V34 & S17           & 145,7125 &  RV57 & R4X           \\
-	145,4375 &   V35 &               & 145,7250 &  RV58 & R5            \\
-	145,4500 &   V36 & S18           & 145,7375 &  RV59 & R5X           \\
-	145,4625 &   V37 &               & 145,7500 &  RV60 & R6            \\
-	145,4750 &   V38 & S19           & 145,7625 &  RV61 & R6X           \\
-	145,4875 &   V39 &               & 145,7750 &  RV62 & R7            \\
-	         &       &               & 145,7875 &  RV63 & R7X
+	Frekvens & Kanal & Anm.         & Frekvens & Kanal & Anm.          \\ \hline
+	145,2125 &   V17 &              & 145,5000 &   V40 & S20  FM Anrop \\
+	145,2250 &   V18 & S9           & 145,5125 &   V41 &  \\
+	145,2375 &   V19 & INET GW      & 145,5250 &   V42 & S21           \\
+	145,2500 &   V20 & S10          & 145,5375 &   V43 &  \\
+	145,2625 &   V21 &              & 145,5500 &   V44 & S22           \\
+	145,2750 &   V22 & S11          & 145,5625 &   V45 &  \\
+	145,2875 &   V23 & INET GW      & 145,5750 &   V46 & S23           \\
+	145,3000 &   V24 & S12  RTTY    & 145,5875 &   V47 &  \\
+	145,3125 &   V25 &              & 145,6000 &  RV48 & R0            \\
+	145,3250 &   V26 & S13          & 145,6125 &  RV49 & R0X           \\
+	145,3375 &   V27 & INET GW      & 145,6250 &  RV50 & R1            \\
+	145,3500 &   V28 & S14          & 145,6375 &  RV51 & R1X           \\
+	145,3625 &   V29 &              & 145,6500 &  RV52 & R2            \\
+	145,3750 &   V30 & S15 DV Anrop & 145,6625 &  RV53 & R2X           \\
+	145,3875 &   V31 &              & 145,6750 &  RV54 & R3            \\
+	145,4000 &   V32 & S16          & 145,6875 &  RV55 & R3X           \\
+	145,4125 &   V33 &              & 145,7000 &  RV56 & R4            \\
+	145,4250 &   V34 & S17 Scout    & 145,7125 &  RV57 & R4X           \\
+	145,4375 &   V35 &              & 145,7250 &  RV58 & R5            \\
+	145,4500 &   V36 & S18          & 145,7375 &  RV59 & R5X           \\
+	145,4625 &   V37 &              & 145,7500 &  RV60 & R6            \\
+	145,4750 &   V38 & S19          & 145,7625 &  RV61 & R6X           \\
+	145,4875 &   V39 &              & 145,7750 &  RV62 & R7            \\
+	         &       &              & 145,7875 &  RV63 & R7X
 \end{longtable}
 
 \clearpage
-\subsection{FM-kanaler 70cm-bandet}
+\subsubsection{FM-kanaler 70cm-bandet}
 
 \begin{longtable}{rrl|rrl}
 	Frekvens & Kanal & Anm.    & Frekvens & Kanal & Anm  \\ \hline
@@ -542,6 +546,22 @@ Information om kanalnumreringen för 23cm-bandet tas tacksamt mot.
 	434,7875 & RU383 &      & 434,9875 & RU399 &      \\
 	         &       &      & 435,0000 & RU400 & RU16 \\
 \end{longtable}
+
+\section{Scouters frekvenser}
+
+Scouter finns ofta QRV under vissa helger, Jamboree On The Air, JOTA, förekommer några gånger per år. Här är en sammanställning av de standardfrekvenser scouter nyttjar om de inte kör repeatrar eller leta upp motstationer själva. Scouter kan antingen ha egna signaler, köra under tillfälliga signaler eller vara second operator åt med någon klubbsignal.
+
+\subsection{Nordiska scoutfrekvenser VHF}
+
+\begin{center}
+\begin{tabular}{lrr}
+	\textbf{Mode} & \textbf{Frekvens} & \textbf{Kanal} \\ \hline
+	FM            &      145.425  MHz &   V34 \\
+	SSB           &      144.240  MHz &  \\
+	CW            &      144.050  MHz &
+\end{tabular}
+\end{center}
+
 
 \begin{landscape}
 \section{Repeatrar, länkar och fyrar}
