--- a/rhb-pad.tex
+++ b/rhb-pad.tex
@@ -11,7 +11,7 @@
 \usepackage{longtable}
 \usepackage{textcomp}
 \renewcommand{\familydefault}{\sfdefault}
-%\usepackage{helvet} 
+\usepackage{helvet} 
 %\usepackage{avant}
 
 \input{body}
