Lade till A4-storlek

--- a/rhb-print-A4.tex
+++ b/rhb-print-A4.tex
@@ -1,14 +1,12 @@
 % !TeX encoding = UTF-8
 % !TeX spellcheck = sv_SE
-\documentclass[10pt,swedish,a5paper,twoside]{article}
+\documentclass[12pt,swedish,a4paper,twoside]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[swedish]{babel}
 \usepackage{longtable}
-\usepackage[a5paper,textwidth=12cm,
-	textheight=17cm,bindingoffset=1cm]{geometry}
+\usepackage[a4paper,bindingoffset=1cm]{geometry}
 \usepackage{amsmath}
 \usepackage{pdflscape}
 \usepackage{longtable}
 \usepackage{textcomp}
-
 \input{body}
