--- a/body.tex
+++ b/body.tex
@@ -564,7 +564,7 @@ Maila mig på anders@sikvall.se om du har korrekt information.
 
 \clearpage
 
-\section{Scouters frekvenser}
+\section{JOTA, Scouters frekvenser}
 
 Scouter finns ofta QRV under vissa helger, \textit{Jamboree On The Air, JOTA}, förekommer några gånger per år. Här är en sammanställning av de standardfrekvenser scouter nyttjar om de inte kör repeatrar eller leta upp motstationer själva. Scouter kan antingen ha egna signaler, köra under tillfälliga signaler eller vara second operator åt med någon klubbsignal.
 
@@ -579,6 +579,9 @@ Scouter finns ofta QRV under vissa helger, \textit{Jamboree On The Air, JOTA}, f
 \end{tabular}
 \end{center}
 
+Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober varje år. Jotan startar officiellt vid invigningen på lördag förmiddag och slutar natten till måndagen klockan 00:00. Många börjar redan på fredagskvällen och avslutar på söndagseftermiddagen.
+
+Sändningar under denna tid förekommer från ocertifierade scouter som lånar klubbsignal, har en tillfällig signal utdelad, ibland lånar enskilda sändaramatörer ut sina signaler. Sändningarna skall dock alltid ske under direkt överinseende av en radioamatör men var beredd på att det kommer vara en viss ovana och ske en del misstag. Strunta i det och ge scouterna en kul radioupplevelse.
 
 \begin{landscape}
 \section{Repeatrar, länkar och fyrar}
