Fixade till vhf-init.tex

--- a/body.tex
+++ b/body.tex
@@ -1,4 +1,4 @@
-\section{Signaler och distrikt}
+\section{Signaler}
 \subsection{Svenska signaler}
 
 Svenska signaler förekommer inom ett antal prefix. Enligt ITU disponerar Sverige förljande signalserier:
@@ -318,4 +318,3 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	Distrikt 6      &      114.8      &      118,8      &      94.8       &      131.8      \\
 	Distrikt 7      &      79.7       &      156.7      &      210.7      &
 \end{tabular}
-
