--- a/body.tex
+++ b/body.tex
@@ -1,4 +1,4 @@
-\section{Signaler}
+\section{Signaler och anrop}
 \subsection{Svenska signaler}
 
 Svenska signaler förekommer inom ett antal prefix. Enligt ITU disponerar Sverige förljande signalserier:
@@ -81,8 +81,8 @@ Eftersom denna handledning är för VHF/UHF tar vi inte med alla DXCC-signaler u
 Sverige delas in i följande distrikt efter sina län:
 
 \begin{center}
-\begin{longtable}{cl}
-	\textbf{Distrikt} & \textbf{Län}                                     \\ \hline \endhead
+\begin{tabular}{cl}
+	\textbf{Distrikt} & \textbf{Län}                                     \\ \hline %\endhead
 	      0        & Stockholm                                        \\
 	      1        & Gotland                                          \\
 	      2        & Västerbotten, Norrbotten                         \\
@@ -92,7 +92,7 @@ Sverige delas in i följande distrikt efter sina län:
 	      6        & Halland, Västra götaland                         \\
 	      7        & Skåne, Blekinge, Kronoberg, Jönköping, Kalmar    \\
 	      8        & Speciella stationer utanför landets gränser
-\end{longtable}
+\end{tabular}
 \end{center}
 
 Distrikten förekommen som siffra i utdelade anropssignaler. Radioamatörer byter inte distriktsiffra under resa i annat distrikt, i stället används prefix som t.ex. /M för mobil. Ofta uppger man "SM0UEI mobilt i SM3-land" för att påvisa att man befinner sig utanför ordinarie distrikt.
