--- a/rhb-print-A4.tex
+++ b/rhb-print-A4.tex
@@ -9,4 +9,9 @@
 \usepackage{pdflscape}
 \usepackage{longtable}
 \usepackage{textcomp}
+
+\input{init-vhf}
 \input{body}
+\input{body-vhf}
+
+\end{document}
